--- a/index.html
+++ b/index.html
@@ -12,11 +12,35 @@
       <div class="card-dails-wrapper">
         <div class="color-bg">
           <img src="./images/bg-main-desktop.png" alt="" class="gray-img" />
+          <div class="card-wrapper">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
         </div>
         <div class="white-bg">
-          <div class="card-wrapper">
-            <img src="./images/bg-card-front.png" alt="" class="card-img" />
-            <img src="./images/bg-card-back.png" alt="" class="card-img1" />
+          <div class="form-container">
+            <div class="input-control">
+              <label for="card holder name">CARD NAME</label>
+              <input type="text" />
+            </div>
+            <div class="input-control">
+              <label for="card holder name">CARD NUMBER</label>
+              <input type="text" />
+            </div>
+            <div class="mo-year">
+              <div class="mm-yy">
+                <label for="">EXPIRATION DATE</label>
+                <div class="mm-input">
+                  <input type="text" name="" id="" value="MM" class="month" />
+                  <input type="text" value="YY" class="year" />
+                </div>
+              </div>
+              <div class="cv-wraper">
+                <label for="card holder name">CVV</label>
+                <input type="text" class="cvv" />
+              </div>
+            </div>
+            <input type="button" name="" id="btn" value="submit" />
           </div>
         </div>
       </div>
