--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
               </div>
               <div class="card-name-wrapper">
-                <div class="name-wrapper">nwachukwu goodness</div>
+                <div class="name-wrapper"></div>
                 <div class="dates">
                   <span class="month-display">00</span>/
                   <span class="year-display">00</span>
