--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                   maxlength="4"
                 />
               </div>
+              <div class="error"></div>
             </div>
             <div class="mo-year">
               <div class="mm-yy">
