--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
             <div class="front">
               <div class="img-wrapper">
                 <!-- <img src="" alt=""> -->
-                <svg
+                <img src="./images/chip.png" alt="" height="56px" />
+                <img src="./images/visa.png" alt="" height="36px" />
+                <!-- <svg
                   width="84"
                   height="47"
                   fill="none"
@@ -33,7 +35,7 @@
                     d="M83.5 23.5c0 5.565-4.507 10.075-10.065 10.075-5.559 0-10.065-4.51-10.065-10.075 0-5.565 4.506-10.075 10.065-10.075 5.558 0 10.065 4.51 10.065 10.075Z"
                     stroke="#fff"
                   />
-                </svg>
+                </svg> -->
               </div>
               <div class="card-num-wrapper">
                 <div class="card-num">
@@ -125,7 +127,9 @@
                 <input type="text" class="cvv" maxlength="3" />
               </div>
             </div>
-            <input type="button" name="" id="btn" value="submit" />
+            <button type="button" name="" id="btn" value="submit">
+              submit
+            </button>
           </div>
         </div>
       </div>
